# len8

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-rtd.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  python-publish.yml
len8/: __init__.py  __main__.py  checker.py  cli.py  errors.py
len8/models/: __init__.py  checker.py  parser.py
tests/: exclude.py  test.toml  test_checker.py  test_lol.toml  test_parser.py  testdata.py
