[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
extend-exclude = "len8/__init__.py|tests/testdata.py"
line-length = 79

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = "tests/testdata.py"
